; ModuleID = '/home/carl/AnghaBench/seafile/common/extr_commit-mgr.c_seaf_commit_manager_traverse_commit_tree_truncated.c'
source_filename = "/home/carl/AnghaBench/seafile/common/extr_commit-mgr.c_seaf_commit_manager_traverse_commit_tree_truncated.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @seaf_commit_manager_traverse_commit_tree_truncated(i32* %0, i8* %1, i32 %2, i8* %3, i32 %4, i8* %5, i32 %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i8*, align 8
  %14 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i8* %1, i8** %9, align 8
  store i32 %2, i32* %10, align 4
  store i8* %3, i8** %11, align 8
  store i32 %4, i32* %12, align 4
  store i8* %5, i8** %13, align 8
  store i32 %6, i32* %14, align 4
  %15 = load i32*, i32** %8, align 8
  %16 = load i8*, i8** %9, align 8
  %17 = load i32, i32* %10, align 4
  %18 = load i8*, i8** %11, align 8
  %19 = load i32, i32* %12, align 4
  %20 = load i8*, i8** %13, align 8
  %21 = load i32, i32* %14, align 4
  %22 = load i32, i32* @TRUE, align 4
  %23 = call i32 @traverse_commit_tree_common(i32* %15, i8* %16, i32 %17, i8* %18, i32 %19, i8* %20, i32 %21, i32 %22)
  ret i32 %23
}

declare dso_local i32 @traverse_commit_tree_common(i32*, i8*, i32, i8*, i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
